# DataLakeLoading

./: .gitattributes  README.md
BOSSConditionalEvaluationEngine/: CMakeLists.txt
BOSSConditionalEvaluationEngine/Source/: BOSSConditionalEvaluationEngine.cpp
BOSSCoreLib/include/: Expression.hpp  PortableBOSSSerialization.h  Serialization.hpp
BOSSCoreLib/share/pkgconfig/: catch2.pc
BOSSDictionaryEncoderEngine/Source/: BOSSDictionaryEncoderEngine.cpp  BOSSDictionaryEncoderEngine.cpp~
BOSSDictionaryEncoderEngine/Tests/: BOSSDictionaryEncoderTests.cpp~
BOSSLazyLoadingCoordinatorEngine/: CMakeLists.txt
BOSSLazyLoadingCoordinatorEngine/Benchmarks/: Benchmarks.cpp  MiniseedQueries.hpp  TPCHQueries.hpp  config.hpp  run_benchmarks.py  utilities.hpp
BOSSLazyLoadingCoordinatorEngine/Source/: BOSSLazyLoadingCoordinatorEngine.cpp  BOSSLazyLoadingCoordinatorEngine.hpp
BOSSLazyLoadingCoordinatorEngine/Tests/: BOSSLazyLoadingCoordinatorTests.cpp
BOSSRemoteBinaryLoaderEngine/: CMakeLists.txt
BOSSRemoteBinaryLoaderEngine/Source/: BOSSRemoteBinaryLoaderEngine.cpp  BOSSRemoteBinaryLoaderEngine.hpp
BOSSRemoteBinaryLoaderEngine/Tests/: BOSSRemoteBinaryLoaderTests.cpp
BOSSVeloxEngine/: CMakeLists.txt
BOSSWisentDeserialiserEngine/: CMakeLists.txt
BOSSWisentDeserialiserEngine/Source/: BOSSWisentDeserialiserEngine.cpp  BOSSWisentDeserialiserEngine.cpp~  BOSSWisentDeserialiserEngine.hpp
BOSSWisentDeserialiserEngine/Tests/: BOSSWisentDeserialiserTests.cpp  BOSSWisentDeserialiserTests.cpp~
DADSConditionalEvaluationEngine/: CMakeLists.txt
DADSConditionalEvaluationEngine/Source/: DADSConditionalEvaluationEngine.cpp  DADSConditionalEvaluationEngine.hpp
DADSConditionalEvaluationEngine/Tests/: DADSConditionalEvaluationTests.cpp
DADSDictionaryEncoderEngine/: #CMakeLists.txt#  CMakeLists.txt  CMakeLists.txt~
DADSDictionaryEncoderEngine/Source/: DADSDictionaryEncoderEngine.cpp  DADSDictionaryEncoderEngine.hpp
DADSDictionaryEncoderEngine/Tests/: DADSDictionaryEncoderTests.cpp
DADSLazyLoadingCoordinatorEngine/: CMakeLists.txt
DADSLazyLoadingCoordinatorEngine/Benchmarks/: Benchmarks.cpp  MiniseedQueries.hpp  ParquetTPCHQueries.hpp  TPCHQueries.hpp  config.hpp  run_benchmarks.py  utilities.hpp
DADSLazyLoadingCoordinatorEngine/Source/: DADSLazyLoadingCoordinatorEngine.cpp  DADSLazyLoadingCoordinatorEngine.cpp~  DADSLazyLoadingCoordinatorEngine.hpp  DADSLazyLoadingCoordinatorEngine.hpp~
DADSLazyLoadingCoordinatorEngine/Tests/: DADSLazyLoadingCoordinatorTests.cpp
DADSParquetReaderEngine/: CMakeLists.txt
DADSParquetReaderEngine/Source/: DADSParquetReaderEngine.cpp  DADSParquetReaderEngine.hpp
DADSParquetReaderEngine/Tests/: DADSParquetReaderEngineTests.cpp
DADSRemoteBinaryLoaderEngine/: CMakeLists.txt  Readme.md
DADSRemoteBinaryLoaderEngine/Source/: DADSRemoteBinaryLoaderEngine.cpp  DADSRemoteBinaryLoaderEngine.hpp
DADSRemoteBinaryLoaderEngine/Tests/: BOSSRemoteBinaryLoaderTests.cpp~  DADSRemoteBinaryLoaderTests.cpp
DADSVeloxEngine/: CMakeLists.txt  Readme.org
DADSVeloxEngine/Source/: BOSSVeloxEngine.cpp~  BridgeVelox.cpp  BridgeVelox.cpp~  BridgeVelox.h  BridgeVelox.h~  DADSCoreTmp.h  DADSVeloxEngine.cpp  DADSVeloxEngine.hpp  DadsConnector.cpp  DadsConnector.h  DadsConnectorSplit.h
DADSVeloxEngine/Tests/: DADSTests.cpp
DADSWisentDeserialiserEngine/: CMakeLists.txt
DADSWisentDeserialiserEngine/Source/: DADSWisentDeserialiserEngine.cpp  DADSWisentDeserialiserEngine.hpp
Results/framework/: .~lock.boss_times.csv#  boss_times.csv  sf_1.csv  sf_10.csv  sf_20.csv
Results/in_mem_convergence/: benchmark_in_mem_convergence_results.json  transfer_size_overhead_mem_conv.csv  transfer_time_overhead_mem_conv.csv
Results/miniseed/: benchmark_miniseed_results.json  miniseed_transfer_size_overhead.csv  miniseed_transfer_time_overhead.csv
Results/ranges/: benchmark_ranges.json
Results/tpch/: benchmark_tpch_results.json  tpch_transfer_size_overhead.csv  tpch_transfer_time_overhead.csv
Results/tpch_parquet/: benchmark_tpch_parquet_results_avg.json
